Update to version 2. The issue with overlapping markers has been addressed, and legal subdivisions that have multiple incidents now return details for all of those incidents. Rendering issues on mobile devices like iPads have also been corrected.

--- a/default.css
+++ b/default.css
@@ -3,7 +3,8 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-size: 100%;
+  font-size: 1em;
+  -webkit-text-size-adjust: none;
 }
 
 #map-canvas, #map_canvas {
@@ -21,10 +22,10 @@ html, body {
 }
 
 #info-panel {
-  width: 25%;
+  width: 30em;
   max-height: 96%;
   position: absolute;
-  font-size: 75%;
+  font-size: 0.75em;
   top: 10px;
   left: 90px;
   background-color: #fff;
